@@ -1,3 +1,4 @@
+Jun 09 2004  devel  Added BSS timestamp spoof detection - BSSTIMESTAMP alert.
 Jun 06 2004  devel  Merged patch from Michael Scherer to fix gcc3.4 compiling
 May 30 2004  devel  Fixed docs for OpenBSD
                     Merged patch from KW which should fix the problems on 64bit
